<?xml version="1.0"?>
<package>
  <name>lab_5</name>
  <version>0.0.0</version>
  <description>The lab_5 package. Contains software to learn about feature detection + matching.</description>

  <maintainer email="arosinol@mit.edu">Antoni Rosinol</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>opencv3_catkin</build_depend>
  <build_depend>glog_catkin</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>opencv3_catkin</run_depend>
  <run_depend>glog_catkin</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>

</package>
