<?xml version="1.0"?>
<package>
  <name>tesse_ros_bridge</name>
  <version>0.0.1</version>
  <description>TESSE/ROS bridge</description>

  <maintainer email="mabate@mit.edu">Marcus Abate</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <!-- List dependencies to system libs and other catkin packages here. -->
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>mav_msgs</build_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>message_runtime</run_depend>

</package>
