<?xml version="1.0"?>
<package>
  <name>opencv3_catkin</name>
  <version>3.4.2</version>
  <description>opencv3_catkin</description>
  <maintainer email="paul.furgale@mavt.ethz.ch">Paul Furgale</maintainer>
  <author>Paul Furgale</author>
  <license>New BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

</package>
